# StockVisor

./: .gitignore  Creating_Stock_Chart_Data_Structure.py  Creating_Stock_Correlation_Data_Structure.py  NASDAQ_STOCK_AAPL.csv  NASDAQ_STOCK_GOOGL.csv  NASDAQ_STOCK_NVDA.csv  README.md  StockVisor.py  pyproject.toml
stockvisor/: __init__.py  analytics.py  cli.py  market_data.py  models.py  reporting.py
