[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockvisor-quant"
version = "2.0.0"
description = "Interactive quantitative stock analysis with live market data, portfolio optimization, and visual dashboards."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=6.0",
    "rich>=13.9",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "yfinance>=1.2.0",
]

[project.scripts]
stockvisor = "stockvisor.cli:main"

[tool.setuptools.packages.find]
include = ["stockvisor*"]
